<resources>
    <string name="app_name">APPet</string>


    <!-- Strings Cadastrar Animal -->
    <string name="txt_nome_pet">Nome</string>
    <string name="txt_especie_pet">Espécie</string>
    <string name="txt_sexo_pet">Sexo</string>
    <string name="txt_raca_pet">Raça</string>
    <string name="txt_cor_pet">Cor</string>
    <string name="txt_nascimento_pet">Nascimento</string>
    <string name="txt_imagem_pet">Imagem</string>
    <string name="btn_salvar_pet">Salvar</string>
    <string name="btn_listar_pet">Listar</string>
    <string name="txt_default_nome_pet">Pet</string>
    <string name="txt_profile_meuspets">Meus Pets</string>
    <string name="txt_profile_addpets">Adicionar pet</string>
    <string name="btn_Alt_Pet">Alterar</string>
    <string name="btn_Del_Pet">Excluir</string>

    <!-- Strings Cadastrar Proprietario -->
    <string name="txt_nome_proprietario">Nome</string>
    <string name="txt_email_proprietario">Email</string>
    <string name="txt_tel_proprietario">Telefone</string>
    <string name="btn_salvar_proprietario">Salvar</string>

    <!-- Strings Perfil Proprietario -->
    <string name="txt_nome_perfil">Nome</string>
    <string name="txt_profile_perfil">Perfil</string>
    <string name="title_activity_principal">PrincipalActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Fechada</string>

</resources>
