<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/profile_proprietario"
            android:checked="false"
            android:icon="@drawable/ic_face_black_24dp"
            android:title="@string/txt_profile_perfil" />

        <item
            android:id="@+id/profile_pets"
            android:checked="false"
            android:icon="@drawable/ic_pets_black_24dp"
            android:title="@string/txt_profile_meuspets" />



    </group>

    <item android:title="Meus Pets">
        <menu>
            <item
                android:id="@+id/profile_add_pets"
                android:checked="false"
                android:icon="@drawable/ic_add_box_black_24dp"
                android:title="@string/txt_profile_addpets" />
        </menu>
    </item>

</menu>