<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="cap7.com.br.petcare.activity.DetalhesAnimalActivity">
    <include
        android:id="@+id/toolbar_detalhes_animal"
        layout="@layout/tool_bar"
        />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollPetAlterar" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_nome_pet"
                android:id="@+id/txtDetalhePetNome" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_raca_pet"
                android:id="@+id/txtDetalhePetRaca" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_cor_pet"
                android:id="@+id/txtDetalhePetCor" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="346dp"
        android:layout_height="28dp"
        android:text="@string/btn_Alt_Pet"
        android:id="@+id/btnPetAlterar"
        android:layout_gravity="center_horizontal"
        android:background="#50b1c7"
         />

    <Button
        android:layout_marginTop="16dp"
        android:layout_width="346dp"
        android:layout_height="28dp"
        android:text="@string/btn_Del_Pet"
        android:id="@+id/btnPetExcluir"
        android:layout_gravity="center_horizontal"
        android:background="#50b1c7"
        />

    <Button
        android:layout_marginTop="16dp"
        android:layout_width="346dp"
        android:layout_height="28dp"
        android:text="VoltarTeste"
        android:id="@+id/btnPetVoltar"
        android:layout_gravity="center_horizontal"
        android:background="#50b1c7"
        />

</LinearLayout>
