<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cap7.com.br.petcare.activity.AlterarAnimalActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollPetAlt" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_nome_pet"
                android:id="@+id/txtPetAltNome" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/editPetAltNome" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_raca_pet"
                android:id="@+id/txtPetAltRaca" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editPetAltRaca"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_cor_pet"
                android:id="@+id/txtPetAltCor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editPetAltCor"
                android:inputType="text" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="346dp"
        android:layout_height="28dp"
        android:text="@string/btn_salvar_pet"
        android:id="@+id/btnPetAltSalvar"
        android:layout_gravity="center_horizontal"
        android:background="#50b1c7"
        android:layout_below="@+id/scrollPetAlt"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
