<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    tools:context=".activity.AnimalActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="#50b1c7"
        android:padding="5dp">

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/imgPet"
            android:src="@mipmap/ic_cat"
            android:textAlignment="center" />

    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollPetAdd" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_nome_pet"
                android:id="@+id/txtPetNome" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:id="@+id/editPetNome" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_especie_pet"
                android:id="@+id/txtPetEspecie" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinPetEspecie"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_sexo_pet"
                android:id="@+id/txtPetSexo" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/spinPetSexo"
                android:spinnerMode="dropdown"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="6dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_raca_pet"
                android:id="@+id/txtPetRaca" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editPetRaca"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_cor_pet"
                android:id="@+id/txtPetCor" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editPetCor"
                android:inputType="text" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:layout_width="346dp"
        android:layout_height="28dp"
        android:text="@string/btn_salvar_pet"
        android:id="@+id/btnPetSalvar"
        android:layout_gravity="center_horizontal"
        android:background="#50b1c7"
        android:onClick="salvarAnimal" />

    <Button
        android:layout_width="346dp"
        android:layout_height="20dp"
        android:text="New Button"
        android:layout_marginTop="8dp"
        android:layout_gravity="center_horizontal"
        android:background="#50b1c7"
        android:id="@+id/buttonTeste" />

</LinearLayout>