<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AnimalActivity"
    android:weightSum="1"
    android:background="#ec0f63ad"
    android:baselineAligned="false"
    android:clickable="true">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="0dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/txtTelProprietario"
        android:background="#ffffff">

        <TextView
            android:gravity="center"
            android:layout_gravity="center_horizontal|top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Bem Vindo!"
            android:id="@+id/txtNomeProprietario"
            android:layout_marginTop="16dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textSize="30dp"
            android:textColor="#0f63ad" />

        <ImageView
        android:layout_width="140dp"
        android:layout_height="131dp"
        android:id="@+id/imageView"
        android:src="@mipmap/petcadastrar"
        android:gravity="center"
        android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="50dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/txtTelProprietario" />

        <ImageView
            android:id="@+id/imgCadastrarProprietario"
            android:src="@mipmap/iconcheck"
            android:layout_width="43dp"
            android:layout_height="40dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="45dp"
            android:layout_gravity="center" />
    </FrameLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="16dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:id="@+id/edtNomeProprietario"
        android:hint="@string/txt_nome_proprietario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff"
        android:password="false"
        android:backgroundTint="#e6ff00" />
    </FrameLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="16dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:hint="@string/txt_email_proprietario"
        android:id="@+id/edtEmailProprietario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#e6ff00"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff" />
    </FrameLayout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_marginBottom="16dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:hint="@string/txt_tel_proprietario"
        android:id="@+id/edtProprietario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:backgroundTint="#e6ff00"
        android:textColorHint="#ffffff"
        android:textColor="#ffffff" />
    </FrameLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="New Button"
        android:id="@+id/button"
        android:background="#ec0f63ad"
        android:textColor="#ffffff" />

</LinearLayout>
